# python-example-app

./: .editorconfig  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .yamlfmt  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  compose.yaml  main.py  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  ossf.yml  pr.yml  scans.yml
.trunk/: trunk.yaml
src/example_app/: __main__.py  database.py  dependencies.py  entities.py  gunicorn.py  gunicorn_conf.py  logger.py  main.py  models.py  repository.py  routes.py  schemas.py  service.py  settings.py
src/example_app/api/: deps.py
src/example_app/api/v1/: __init__.py
src/example_app/api/v1/routes/: __init__.py  health.py  tasks.py
src/example_app/core/: __init__.py  config.py  logger.py
src/example_app/db/: base.py  session.py
src/example_app/features/: __init__.py
src/example_app/features/tasks/: __init__.py  models.py  repository.py  schemas.py  service.py
src/example_app/routes/: __init__.py  tasks.py
tests/: test_app.py  test_gunicorn.py  test_settings.py
