[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "example-app"
version = "0.1.0"
description = "Python example app incorporating best practices"
authors = [{ name = "yxtay", email = "5795122+yxtay@users.noreply.github.com" }]
license = "MIT"
requires-python = "~=3.11"
dependencies = [
  "fastapi[all]>=0.115",
  "gunicorn>=23.0",
  "loguru>=0.7",
  "sqlmodel>=0.0",
  "typer>=0.15",
]

[dependency-groups]
dev = [
  "mypy~=1.15",
  "pytest~=8.3",
  "pytest-cov~=6.0",
  "pytest-env~=1.1",
  "pytest-mock~=3.14",
  "pytest-xdist~=3.6",
]
compile = [
  "pyinstaller~=6.13 ; sys_platform == 'linux'",
  "scons~=4.9 ; sys_platform == 'linux'",
  "staticx~=0.14 ; sys_platform == 'linux'",
]

[tool.isort]
profile = "black"
float_to_top = true
src_paths = [".", "src", "tests"]

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "-v",
  "--strict-markers",
  "--import-mode=importlib",
  "--cov=src",
]

[tool.ruff]
fix = true
src = [".", "src", "tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstyle
  "E501",   # line-too-long
  "COM812", # missing-trailing-comma # conflicts with ruff formatter
  "ISC001", # single-line-implicit-string-concatenation # conflicts with ruff formatter
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "S101", # assert
]
